# WazBot

./: .gitignore  README.md  main.py  play_model.py  play_model_bot.py  pyproject.toml  requirements.txt  reward_testing.py
models/: meta.json  model.pt
src/: bot.py  eval.py  main.py  model.py  play_model.py  play_model_bot.py  replay.py  reward_testing.py  select.py  train.py
