[tool.poetry]
name = "wazbot"
version = "0.2.0"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
haxballgym-tools = "1.1.0"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-win_amd64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
