[tool.poetry]
name = "wazbot"
version = "0.2.1"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
haxballgym-tools = "1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
