[project]
name = "wazbot"
version = "1.0.0"
description = "A solid starting bot for HaxballGym."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Wazarr" }]
dependencies = [
    "haxballgym>=1.0.1",   # the env + the native haxball_core engine (pulled transitively)
    "torch>=2.2",          # the policy network (loads the shipped model)
]

[tool.uv]
package = false            # a folder of scripts, not an installable distribution

[tool.ruff]
line-length = 110
